--- a/themes/beercave/layouts/index.html
+++ b/themes/beercave/layouts/index.html
@@ -39,7 +39,7 @@ BIG OL' FOOTER
 <section class="container">
 <section class="row">
 <div class="col-md-8 block"><p>{{.Content}}</p></div>
-<div class="col-md-4 text-center"><img src='{{ "/img/beerman-cutout-smol.png" | absURL}}'></div>
+<div class="col-md-4 text-center"><img src='{{ "img/beerman-cutout-smol.png" | absURL}}'></div>
 </section>
 </section>
 {{end}}
