--- a/themes/beercave/layouts/blog/single.html
+++ b/themes/beercave/layouts/blog/single.html
@@ -57,8 +57,8 @@
             <div class="sidebar">
                 <section class="sidebar-content">
                     <article id="profile">
-                        <a href='{{ "/img/beerman-cutout.png" | absURL}}' data-toggle="lightbox">
-                            <img src='{{ "/img/beerman-cutout-smol.png" | absURL}}' title="Judge Beerman">
+                        <a href='{{ "img/beerman-cutout.png" | absURL}}' data-toggle="lightbox">
+                            <img src='{{ "img/beerman-cutout-smol.png" | absURL}}' title="Judge Beerman">
                         </a>
                         <h1>
                             Beerman's blog
