--- a/themes/beercave/layouts/partials/header.html
+++ b/themes/beercave/layouts/partials/header.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-md fixed-top navbar-dark bg-dark-bc">
     <div class="container-fluid">
-        <a class="navbar-brand" href="/" aria-label="home">
+        <a class="navbar-brand" href='{{"" | absURL}}' aria-label="home">
         <img src='{{"img/logo.png" | absURL}}'/>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
