--- a/themes/beercave/layouts/partials/footer.html
+++ b/themes/beercave/layouts/partials/footer.html
@@ -1,6 +1,39 @@
 <footer>
     <section class="container">
-       
-TODO : Add a nice looking footer here with links and stuff
+       <div class="row">
+           <section id="links" class="col-sm-6 col-lg-4">
+                <h1>Links</h1>
+                <ul>
+                    <li><a href='{{"" | absURL}}'>Home</a></li>
+                    <li><a href='{{"about" | absURL}}'>About Beercave Games</a></li>
+                    <li><a href='{{"games" | absURL}}'>Games</a></li>
+                    <li><a href='{{"blog" | absURL}}'>Blog</a></li>
+                </ul>
+           </section>
+           <section id="social-bollocks" class="col-sm-6 col-lg-4">
+                <h1>Social media bollocks</h1>
+                <ul>
+                    <li>
+                        <a href='https://twitter.com/BeercaveGames' title="@BeercaveGames on Twitter">
+                        <img src='{{"img/social/twitter.png" | absURL}}'>
+                        </a>
+                    </li>
+                    <li>
+                        <a href='https://twitter.com/BeercaveGames' title="BeercaveGames on Youtube">
+                        <img src='{{"img/social/youtube.png" | absURL}}'>
+                        </a>
+                    </li>
+                    <li>
+                        <a href='https://twitter.com/rss' title="RSS feed">
+                        <img src='{{"img/social/rss.png" | absURL}}'>
+                        </a>
+                    </li>
+                </ul>
+           </section>
+           <section id="copyright" class="col-12 text-center">
+               &copy; 2019 Beercave Games
+           </section>
+       </div>
+        
     </section>
 </footer>
