--- a/themes/beercave/layouts/_default/single.html
+++ b/themes/beercave/layouts/_default/single.html
@@ -1,6 +1,6 @@
 {{define "main"}}
 {{if .Params.banner }}
-<article class="jumbotron hero px-0">
+<article class="jumbotron jumbotron-fluid hero px-0">
         <img src="{{ .Params.banner| absURL}}"/>
 </article>
 
