--- a/themes/beercave/static/css/beercave.css
+++ b/themes/beercave/static/css/beercave.css
@@ -79,6 +79,7 @@ body{
     position:absolute;
     top:0;
     height:100%;
+    min-width:100%;
     transform: translateX(-50%);
     left: 50%;
     z-index:-10;
