--- a/themes/beercave/layouts/partials/footer.html
+++ b/themes/beercave/layouts/partials/footer.html
@@ -24,7 +24,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href='https://twitter.com/rss' title="RSS feed">
+                        <a href='{{"index.xml" | absURL}}' title="RSS feed">
                         <img src='{{"img/social/rss.png" | absURL}}'>
                         </a>
                     </li>
